<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/cafe_cho_meo"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.MainActivity">

    <EditText
        android:background="@color/colorWhite"
        android:id="@+id/etUserName"
        android:layout_marginTop="@dimen/_200sdp"
        android:hint="@string/userName"
        android:layout_centerHorizontal="true"
        android:layout_width="@dimen/_200sdp"
        android:layout_height="@dimen/_30sdp" />

    <EditText
        android:inputType="textPassword"
        android:background="@color/colorWhite"
        android:layout_below="@id/tvErrorUser"
        android:id="@+id/etPassWord"
        android:hint="@string/passWord"
        android:layout_centerHorizontal="true"
        android:layout_width="@dimen/_200sdp"
        android:layout_height="@dimen/_30sdp" />

    <TextView
        android:textColor="@color/colorRed"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/etUserName"
        android:id="@+id/tvErrorUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:textColor="@color/colorRed"
        android:layout_below="@+id/etPassWord"
        android:layout_centerHorizontal="true"
        android:id="@+id/tvErrorPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:layout_below="@id/tvErrorPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/btLogin"
            android:text="@string/login"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btCreatAccount"
            android:text="@string/creatAccount"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <FrameLayout
        android:layout_marginTop="@dimen/_150sdp"
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_200sdp">

    </FrameLayout>
</RelativeLayout>